--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,8 +9,18 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+    <servlet>
+        <servlet-name>info</servlet-name>
+        <servlet-class>service.InfoServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>info</servlet-name>
+        <url-pattern>/info</url-pattern>
     </servlet-mapping>
 </web-app>
