--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,6 +14,26 @@
         <servlet-class>service.InfoServlet</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>attendance</servlet-name>
+        <servlet-class>service.AttendanceServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>workdate</servlet-name>
+        <servlet-class>service.WorkDateServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>workdate</servlet-name>
+        <url-pattern>/workdate</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>attendance</servlet-name>
+        <url-pattern>/attendance</url-pattern>
+    </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
